# rust_booking

./: .env  Cargo.toml  Dockerfile  README.md  Rocket.toml  diesel.toml  docker-compose.yaml  logs.txt
benches/: my_benchmark.rs
data/: rooms.json
db/: init.sql
docs/: Rust Booking.postman_collection.json  problems.md  user_stories.md
migrations/2023-08-13-082809_bookings/: up.sql
src/: lib.rs  main.rs  schema.rs
src/controllers/: availability_controller.rs  booking_controller.rs  mod.rs  room_controller.rs
src/domain/: booking.rs  mod.rs
src/domain/booking/: allotment.rs  booking.rs  booking_repository.rs  booking_service.rs  entity.rs  event_type.rs  mod.rs  repository.rs  service.rs
src/infrastructure/: mod.rs
src/infrastructure/booking/: booking_repository_impl.rs  mod.rs
src/infrastructure/common/: mod.rs
src/infrastructure/database/: connection.rs  schema.rs
src/middleware/: cors.rs  mod.rs
src/models/: mod.rs
templates/: bookings.html.hbs
tests/: integration_test.rs
