[package]
name = "rust_booking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web framework
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
# serialize/deserialize
serde = "1.0.183"
# .env
dotenvy = "0.15"
# orm - mysql, postgre, sqlite
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
rocket_contrib = "0.4.4"

[dependencies.rocket_dyn_templates]

features = ["handlebars"]

